fix(title): Fixes scrolling issue in title when overflowing

--- a/src/styles/_marquee.scss
+++ b/src/styles/_marquee.scss
@@ -20,23 +20,18 @@
   @keyframes scroll {
     0% {
       opacity: 1;
-      transform: translateX(0%); }
+      transform: translateX(0%);
+    }
     20% {
-      opacity: 1;
-      transform: translateX(0%); }
-    40% {
       opacity: 1;
       transform: translateX(0%);
     }
-    80% {
-      opacity: 1;
-    }
     90% {
-      opacity: 0;
-      transform: translateX(-110%);
+      opacity: 1;
     }
     100% {
       opacity: 0;
+      transform: translateX(-100%);
     }
   }
  }
